--- a/tasks/install_awscli.yml
+++ b/tasks/install_awscli.yml
@@ -21,9 +21,23 @@
     mode: 0755
   when: aws_ecs_cli_enabled
 
-- name: download aws_ec2metadata_url
+- name: download ec2-metadata
   get_url:
     url: "{{ aws_ec2metadata_url }}"
     dest: /usr/local/bin/ec2-metadata
     mode: 0755
   when: aws_ec2metadata_enabled
+
+- name: install bash autocompletion for AWS CLI
+  lineinfile:
+    dest: "/home/{{ item }}/.bashrc"
+    line: "complete -C '/usr/local/bin/aws_completer' aws"
+  with_items: "{{ aws_cli_users }}"
+  when: aws_cli_bash_autocompletion
+
+- name: install zsh autocompletion for AWS CLI
+  lineinfile:
+    dest: "/home/{{ item }}/.zshrc"
+    line: "source /usr/local/bin/aws_zsh_completer.sh"
+  with_items: "{{ aws_cli_users }}"
+  when: aws_cli_zsh_autocompletion
