--- a/tasks/install_awscli.yml
+++ b/tasks/install_awscli.yml
@@ -12,32 +12,32 @@
     name: awsebcli
     extra_args: "{{ '-U' if awsebcli_state == 'latest' else '' }}"
     state: present
-  when: aws_eb_cli_enabled
+  when: aws_eb_cli_enabled|bool
 
 - name: install AWS ECS cli
   get_url:
     url:  "{{ aws_ecscli_url }}"
     dest: /usr/local/bin/ecs-cli
     mode: 0755
-  when: aws_ecs_cli_enabled
+  when: aws_ecs_cli_enabled|bool
 
 - name: download ec2-metadata
   get_url:
     url: "{{ aws_ec2metadata_url }}"
     dest: /usr/local/bin/ec2-metadata
     mode: 0755
-  when: aws_ec2metadata_enabled
+  when: aws_ec2metadata_enabled|bool
 
 - name: install bash autocompletion for AWS CLI
   lineinfile:
     dest: "/home/{{ item }}/.bashrc"
     line: "complete -C '/usr/local/bin/aws_completer' aws"
   loop: "{{ aws_cli_users }}"
-  when: aws_cli_bash_autocompletion
+  when: aws_cli_bash_autocompletion|bool
 
 - name: install zsh autocompletion for AWS CLI
   lineinfile:
     dest: "/home/{{ item }}/.zshrc"
     line: "source /usr/local/bin/aws_zsh_completer.sh"
   loop: "{{ aws_cli_users }}"
-  when: aws_cli_zsh_autocompletion
+  when: aws_cli_zsh_autocompletion|bool
