--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,20 @@
 ---
+galaxy_info:
+  author: Charles Sanquer
+  description: "install AWS CLI tools"
+  min_ansible_version: 2.6
+  license: LGPLv3
+  github_branch: master
+  platforms:
+    - name: Ubuntu
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - all
+
+  galaxy_tags: []
+
 dependencies:
     - packages
     - python
